Refactor MongoDB connection to use dotenv
Updated MongoDB connection to use environment variable for URI.

--- a/notebook/EDA.ipynb
+++ b/notebook/EDA.ipynb
@@ -11,8 +11,11 @@
     "\n",
     "from pymongo import MongoClient\n",
     "import pandas as pd\n",
+    "from dotenv import load_dotenv\n",
+    "import os"
     "\n",
-    "Client = MongoClient(\"mongodb+srv://hasan:password01@cluster0.o3kej.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\")\n",
+    "load_dotenv()"
+    "Client = os.getenv("URI")\n",
     "collection = Client[DATABASE_NAME][COLLECTION_NAME]\n",
     "df = pd.DataFrame(collection.find())\n",
     "df.head()"
