--- a/notebook/EDA.ipynb
+++ b/notebook/EDA.ipynb
@@ -12,9 +12,9 @@
     "from pymongo import MongoClient\n",
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
-    "import os"
+    "import os\n"
     "\n",
-    "load_dotenv()"
+    "load_dotenv()\n"
     "Client = os.getenv("URI")\n",
     "collection = Client[DATABASE_NAME][COLLECTION_NAME]\n",
     "df = pd.DataFrame(collection.find())\n",
